[package]
name = "rn"
description = "Command line tool to bulk rename files recursively. It's fast!"
authors = ["Bnyro"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
lazy_static = "1.4.0"
walkdir = "2.3.2"
